[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/localization_example/Data/Video/video_en.webm" type="VideoStream" id=1]
[ext_resource path="res://addons/localization_example/Data/Audio/hello_en.ogg" type="AudioStream" id=2]
[ext_resource path="res://addons/localization_example/Data/Images/play_en.png" type="Texture" id=3]
[ext_resource path="res://addons/localization_example/Localization.gd" type="Script" id=4]
[ext_resource path="res://addons/localization_example/font/Pangolin-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay" type="Button" parent="Main"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.1
custom_fonts/font = SubResource( 1 )
text = "KEY_PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSettings" type="Button" parent="Main"]
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.2
custom_fonts/font = SubResource( 2 )
text = "KEY_SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLanguages" type="Button" parent="Main"]
anchor_left = 0.05
anchor_top = 0.25
anchor_right = 0.95
anchor_bottom = 0.3
custom_fonts/font = SubResource( 3 )
text = "KEY_LANGUAGE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlaySound" type="Button" parent="Main"]
anchor_left = 0.05
anchor_top = 0.35
anchor_right = 0.95
anchor_bottom = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Main/ButtonPlaySound"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_right = 32.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonQuit" type="Button" parent="Main"]
anchor_left = 0.05
anchor_top = 0.45
anchor_right = 0.95
anchor_bottom = 0.5
custom_fonts/font = SubResource( 4 )
text = "KEY_QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelText" type="Label" parent="Main"]
anchor_left = 0.05
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 0.95
custom_fonts/font = SubResource( 5 )
text = "KEY_TEXT"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="AudioStreamPlayer" parent="Main"]
stream = ExtResource( 2 )

[node name="Video" type="VideoPlayer" parent="Main"]
anchor_left = 0.61
anchor_top = 0.65
anchor_right = 0.95
anchor_bottom = 0.95
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0
stream = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlayVideo" type="Button" parent="Main"]
anchor_left = 0.61
anchor_top = 0.55
anchor_right = 0.95
anchor_bottom = 0.6
custom_fonts/font = SubResource( 6 )
text = "KEY_PLAY_VIDEO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Languages" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Languages"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.1
custom_fonts/font = SubResource( 7 )
text = "KEY_LANGUAGESELECT"
align = 1
valign = 1

[node name="OptionButtonLang" type="OptionButton" parent="Languages"]
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="Button" parent="Languages"]
anchor_left = 0.05
anchor_top = 0.35
anchor_right = 0.95
anchor_bottom = 0.4
margin_left = -2.66968
margin_right = -2.66968
custom_fonts/font = SubResource( 8 )
text = "KEY_BACK"
__meta__ = {
"_edit_use_anchors_": false
}
